--- a/src/styles/taskForm.module.css
+++ b/src/styles/taskForm.module.css
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000000000;
+  z-index: 1000000000000;
 }
 
 @keyframes slide-in {
